--- a/index.css
+++ b/index.css
@@ -1,3 +1,48 @@
-#root{
-    color: red
+.header {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 100px;
+    height: 100px;
+}
+
+.nav-items {
+    padding: 0px 20px;
+}
+
+.nav-items > ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-items > ul > li {
+    padding : 10px;
+    
+}
+
+.search {
+    padding: 10px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card {
+    width: 200px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+}
+
+.res-image {
+    width: 100%;
 }
