--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,11 @@
     float: right;
 }
 
+.filter-reset-btn{
+    float: right;
+    cursor: pointer;
+}
+
 .res-container{
     display: flex;
     flex-wrap: wrap;
@@ -70,4 +75,17 @@
 
 .res-image {
     width: 100%;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    width: 200px;
+    height: 300px;
+    padding: 10px;
+    margin: 10px;
+    background-color: #f0f0f0;
 }
